<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <!-- Dummy item to prevent TextInputEditText Title from receiving focus -->
                <LinearLayout
                    android:layout_width="0px"
                    android:layout_height="0px"
                    android:focusable="true"
                    android:focusableInTouchMode="true" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:maxLines="1"
                    android:paddingTop="20dp"
                    android:inputType="text"
                    android:textAlignment="center"
                    android:textSize="25sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/Year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/year"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:id="@+id/ActorView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/firstActor"
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/actor"
                        android:maxLines="1"
                        android:textAlignment="center" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <Button
                android:id="@+id/btnAddActor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/btnAddActor" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/synopsis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/synopsis"
                    android:minLines="11" />
            </android.support.design.widget.TextInputLayout>




        </LinearLayout>
    </ScrollView>

    <LinearLayout
    android:layout_gravity="bottom"
    android:layout_width="match_parent"
    android:layout_height="0dp"
        android:layout_weight="1"
    android:orientation="horizontal">

    <Button
        android:id="@+id/btnReturn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Retour" />

    <Button
        android:id="@+id/btnOk"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btnOk" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_weight="1"
        android:text="Supprimer" />
    </LinearLayout>
</LinearLayout>